Fixed word wrap css

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -85,3 +85,7 @@ span[data-toggle="popover"]:focus {
   list-style: none;
   padding-left:0;
 }
+
+.pr-title {
+    word-break: break-word;
+}
